[package]
name = "manny"
version = "0.1.0"
authors = ["Milo123459"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
colored = "2.0.0"
anyhow = "1.0.59"
dirs-next = "2.0.0"